--- a/Kasol.html
+++ b/Kasol.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light ">
       <div class="container-fluid">
 
-        <a class="navbar-brand" href="test3.html">ADVENTURE.com</a>
+        <a class="navbar-brand" href="index.html">ADVENTURE.com</a>
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
@@ -74,7 +74,7 @@
 
 
             <li class="nav-item">
-              <a class="nav-link" href="galery .html">Gallery</a>
+              <a class="nav-link" href="galery.html">Gallery</a>
             </li>
             <!-- tour..................... -->
             <li class="nav-item dropdown">
@@ -88,7 +88,7 @@
                 <li class="dropdown-item"><a href="biketrip.html">📍 Leh-Ladakh</a></li>
               </ul>
             </li>
-            <!-- IMG OF indian flag -->
+            <!-- IMG OF Indian flag -->
 
             <li class="nav-item">
               <a class="nav-link" href="#"></a>
