--- a/hamtapass.html
+++ b/hamtapass.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light ">
       <div class="container-fluid">
 
-        <a class="navbar-brand" href="test3.html">ADVENTURE.com</a>
+        <a class="navbar-brand" href="index.html">ADVENTURE.com</a>
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
